test/cases/compile_errors/unused_variable_error_on_errdefer.zig
fn foo() !void {
    errdefer |a| unreachable;
    return error.A;
}
export fn entry() void {
    foo() catch unreachable;
}

// error
// backend=stage2
// target=native
//
// :2:15: error: unused capture
